# rust-studies

./: README.md
RustForRustaceans/static_memory/: Cargo.toml
alignement/: Cargo.toml
alignement/src/: main.rs
associated-type/src/: main.rs
async-quay-test/quay/: Cargo.toml  response.json
chapter10/: README.md
chapter12/minigrep/: README.md
chapter13/: README.md
chapter15/: README.md
chapter16/: README.md
chapter16/refcel/: Cargo.toml
chapter20/traits-advanced/: Cargo.toml
chapter4/: README.md
chapter5/methods_on_structs/: Cargo.toml
chapter6/enum-matching/: Cargo.toml
chapter7/: README.md
chapter8/: README.md
chapter9/: README.md
guessing_game/src/: main.rs
install_and_config/: README.md
qcli/: Cargo.toml  README.md  mirror_quay.json  mirror_rust.json
qcli/.qcli/: login.yaml
qcli/src/: main.rs  quay_config_reader.rs
qcli/src/quay_config_reader/: organization_struct.rs  quay_config_reader.rs
qcli/src/quay_configurator/: organization_struct.rs  quay_config_reader.rs
qcli/xml-files/: example-organization.yaml  example-organization2 copy 2.yaml  example-organization2 copy 3.yaml  example-organization2 copy 4.yaml  example-organization2 copy.yaml  example-organization2.yaml  example-organization4.yaml  example-organization5.yaml  example-organization6.yaml
qcli/yaml-files/: example-organization.yaml  example-organization2.yaml  example-organization3.yaml  example-organization4.yaml  example-organization5.yaml  example-organization6.yaml
quay_xml_reader/: Cargo.toml
test-associated-type/: Cargo.toml
variance/: Cargo.toml
(+37 files in other folders)
