[package]
name = "qcli"
version = "0.1.1"
edition = "2021"
authors = ["Valentino Uberti <vuberti@redhat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
