[package]
name = "qcli"
version = "0.1.1"
edition = "2021"
authors = ["Valentino Uberti <vuberti@redhat.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.15", features = ["full","tracing"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.61"
console-subscriber = { version ="0.1.8"}
reqwest = { version = "0.11.13",features = ["json"] }
serde_json = "1.0.91"
futures = "0.3.25"
substring = "1.4.5"
chrono = "0.4.23"
governor = "0.5.1"
indicatif = "0.17.3"
log = "0.4.17"
env_logger = "0.10.0"


